# shopping-cart

./: Dockerfile  build-image.sh  pyproject.toml  redis.yaml  shopping-cart.yaml
app/: load_generator.py  main.py
